SF Primes/src/objects/Recap_NonLMA_Status_Conditions__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>These settings are for checking what conditions are to be satisfied for each of the non LMA statuses</description>
    <fields>
        <fullName>AccountAndProduct_fields__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AccountAndProduct fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AllFields__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AllFields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CancelRecap__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CancelRecap</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContainsWebsite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ContainsWebsite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IFSRoleCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IFSRoleCheck</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Launch_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Launch Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LockedRecap__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LockedRecap</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NotInIFSRolecheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NotInIFSRolecheck</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OwnerRoleMapContainsOwnerId__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OwnerRoleMapContainsOwnerId</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OwnerRoleMap__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OwnerRoleMap</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recap_WebIdNameFields_Filled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recap WebIdNameFields Filled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Required_ProductFields_Filled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required ProductFields Filled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Required_RecapFields_Filled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required RecapFields Filled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Required_WebIdFields_Filled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required WebIdFields Filled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Order__c</fullName>
        <label>Status_Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Recap NonLMA Status Conditions</label>
</CustomObject>